# duckchat

./: Makefile  README.md  pyproject.toml  requirements.build.txt
src/duckchat/: cli.py
