[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "duckchat"
version = "0.1.0"
dependencies = [
    "google_speech",
    "requests",
    "rich",
]
description = "command line interface for the DuckDuckGo AI chat"
authors = [
    { name = "hek2mgl", email = "hek2mgl@metashock.net" }
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/hek2mgl/duckchat.git"
Issues = "https://github.com/hek2mgl/duckchat/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/duckchat"]

[project.scripts]
duckchat = "duckchat.cli:main"
